feature(Update survey endpoints with new database model)
- Fixed schema exporting
- Refactor controller
- Change res.survey to req.survey in getSurveyById
- Expanded create/update requests
- Refactor router
- Updated Swagger docs
